adjusted semantics, fixed fonts and placing of pictures on mobile

--- a/output.css
+++ b/output.css
@@ -41,8 +41,8 @@ body {
   justify-content: center;
   color: white;
   font-weight: 700;
-  font-size: 1.5rem;
-  line-height: 1;
+  font-size: 0.6rem;
+  line-height: 0rem;
   text-align: left;
 }
 
@@ -182,6 +182,7 @@ p a {
 }
 
 .review cite {
+  margin-left: 1px;
   font-style: normal;
   display: block;
   font-size: 0.9rem;
@@ -195,6 +196,12 @@ p a {
   align-content: center;
   height: 200px;
   background-color: white;
+}
+
+.div h2 {
+  margin-bottom: -55px;
+  font-size: 2rem;
+  font-weight: 400;
 }
 
 section h2 {
@@ -297,10 +304,10 @@ section p {
   background-color: white;
 }
 
-.pointing-image {
+.pointing-image img {
+  max-height: 480px;
   width: 100%;
   height: auto;
-  display: block;
   object-fit: cover;
 }
 
@@ -311,10 +318,10 @@ section p {
   background-color: white;
 }
 
-.thinking-image {
+.thinking-image img {
+  max-height: 480px;
   width: 100%;
   height: auto;
-  display: block;
   object-fit: cover;
 }
 
@@ -365,7 +372,7 @@ section p {
   display: none;
 }
 
-@media (min-width: 960px) {
+@media (min-width: 1280px) {
   .main-nav {
     display: block;
   }
@@ -382,14 +389,21 @@ section p {
     color: white;
     font-weight: 600;
     text-decoration: none;
+    font-size: 1.5rem;
   }
   .main-nav a:hover {
     color: var(--lightblue);
     cursor: pointer;
   }
+  .div h2 {
+    font-size: 2.5rem;
+    font-weight: 400;
+  }
   .logo-text {
     flex-direction: row;
     gap: 0.8rem;
+    font-size: 1rem;
+    margin-top: 35px;
   }
   p a {
     display: none;
@@ -401,7 +415,7 @@ section p {
     display: flex;
     justify-content: center;
     gap: 1rem;
-    margin: -1.5rem;
+    margin-top: -2.1rem;
   }
   .challenges-buttons {
     background-color: white;
@@ -415,9 +429,10 @@ section p {
     background-color: var(--red);
     color: white;
     font-weight: 700;
-    padding: 1rem 2rem;
+    font-size: 1.2rem;
+    padding: 1.5rem 4.5rem;
     border: none;
-    border-radius: 2px;
+    border-radius: 4px;
   }
   .redBtn:hover {
     background-color: #940b01;
@@ -428,9 +443,10 @@ section p {
     background-color: var(--lightblue);
     color: black;
     font-weight: 700;
-    padding: 1rem 2rem;
+    font-size: 1.2rem;
+    padding: 1.5rem 4.5rem;
     border: none;
-    border-radius: 2px;
+    border-radius: 4px;
   }
   .blueBtn:hover {
     background: #396a7a;
@@ -459,6 +475,7 @@ section p {
     padding: 0;
     max-width: 1100px;
     margin: 0 auto;
+    padding-bottom: 5rem;
   }
   .card {
     scroll-snap-align: unset;
